--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -8,6 +8,10 @@
 <body>
 
     <h1>HOME PAGE</h1>
+
+    <a href = "{{url_for('login')}}">login</a>
+    <a href = "{{url_for('register')}}">register</a>
+    
     
 </body>
 </html>
