--- a/4pics1word/templates/register.html
+++ b/4pics1word/templates/register.html
@@ -11,15 +11,15 @@
 <body>
   
     <div class="wrapper">
-        <form action="">
+        <form method="POST" action="">
             <h1>Register</h1>
             <div class="input-box">
-                <input type="text" placeholder="Username" 
+                <input type="text" placeholder="Username" name="username"
                 required>
                 <i class="bi bi-person-fill"></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Password" required>
+                <input type="password" placeholder="Password" name="password" required>
                 <i class="bi bi-key-fill"></i>
             </div>
             <div class="input-box">
