--- a/4pics1word/templates/login.html
+++ b/4pics1word/templates/login.html
@@ -13,14 +13,14 @@
 <body>
   
     <div class="wrapper">
-        <form action="">
+        <form method="POST" action="">
             <h1>Login</h1>
             <div class="username-container input-box">
-                <input type="text" id = 'username-input' placeholder="Username" class = 'form-control' required>
+                <input type="text" id = 'username-input' placeholder="Username" class = 'form-control' name = 'username' required>
                 <i class="bi bi-person-fill"></i>
             </div>
             <div class="password-container input-box">
-                <input type="password" id = 'password-input' placeholder="Password" class = 'form-control' required>
+                <input type="password" id = 'password-input' placeholder="Password" class = 'form-control' name = 'password' required>
                 <i class="bi bi-key-fill"></i>
                 <div class = 'invalid-feedback'>Invalid Password</div>
             </div>
