--- a/4pics1word/templates/register.html
+++ b/4pics1word/templates/register.html
@@ -23,7 +23,7 @@
                 <i class="bi bi-key-fill"></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Confirm Password" required>
+                <input type="password" placeholder="Confirm Password" name="confirmPassword" required>
                 <i class="bi bi-key-fill"></i>
             </div>
 
