--- a/4pics1word/static/css/styles.css
+++ b/4pics1word/static/css/styles.css
@@ -8,11 +8,23 @@
 }
 
 body {
-    background-image: linear-gradient( 126.3deg,  rgba(30,2,83,1) 32.2%, rgba(198,55,160,0.46) 109.2% );
+    /* background-image: linear-gradient( 126.3deg,  rgba(30,2,83,1) 32.2%, rgba(198,55,160,0.46) 109.2% ); */
     display: flex;
     min-height: 100vh; 
     justify-content: center;
     align-items: center;
+}
+
+.modal-body {
+    padding: 0;
+}
+
+#close-button-auth-popup {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    border: 0;
+    background-color: transparent;
 }
 
 .wrapper {
@@ -21,11 +33,11 @@ body {
     justify-content: center;
     align-items: center;
     background: #fff; 
-    width: 420px;
+    /* width: 420px; */
     color: #333; 
     border-radius: 10px;
     padding: 40px; 
-    box-shadow: 0 0 10px rgba(0,0,0,.1); 
+    /* box-shadow: 0 0 10px rgba(0,0,0,.1);  */
     margin-top: 50px; 
 }
 
