fixed an error brought up in PR where the page would not load due to incorrectt href values

--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -48,7 +48,7 @@
                         <button type="submit" class="btn">Login</button>
             
                         <div class="register-link">
-                            <p>Don't have an account? <a data-bs-toggle="modal" data-bs-target="#registerModal" href="{{url_for('register')}}">Register</a></p>
+                            <p>Don't have an account? <a data-bs-toggle="modal" data-bs-target="#registerModal" href = ''>Register</a></p>
                         </div>
                     </form>
                 </div>
@@ -91,7 +91,7 @@
                         <button type="submit" class="btn">Register</button>
             
                         <div class="Login-link">
-                            <p>Already have an account? <a data-bs-toggle="modal" data-bs-target="#loginModal" href="{{url_for('login')}}">Login</a></p>
+                            <p>Already have an account? <a data-bs-toggle="modal" data-bs-target="#loginModal" href = ''>Login</a></p>
                         </div>
                     </form>
                 </div>
