--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -6,8 +6,35 @@
     <title>Document</title>
 </head>
 <body>
-    
 
+    <!--- navbar -->
+    <nav class="navbar navbar-expand-md">
+        
+        <div class="container-xxl">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Challanges</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">leaderboard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Head 2 Head</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" aria-disabled="true">extra</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        
+    </nav>
+    
     <h1>CHALLENGE BOARD</h1>
 </body>
 </html>
