--- a/4pics1word/static/css/create_game.css
+++ b/4pics1word/static/css/create_game.css
@@ -1,6 +1,5 @@
 body {
-    background: rgb(176,92,241);
-    background: radial-gradient(circle, rgba(176,92,241,1) 0%, rgba(114,26,250,1) 100%);
+    background-color: #F8F8F8;
     width: 100%;
     height: 100%;
 }
@@ -73,5 +72,5 @@ label {
 }
 
 .text {
-    color: white
+    color: black
 }
