changes were requested to clean up the code leading up to a merge with main, removed an unused function in the client side code located in the login-validation.js file, also moved all the code into that file as opposed to keeping it all in the HTML document

--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/styles.css')}}">
+    <script defer src = "{{url_for('static', filename = 'js/login-validation.js')}}"></script>
 
     <style>
         .form-control.is-valid, .was-validated .form-control:valid {
@@ -113,157 +114,6 @@
         </div>
         </div>
     </div>
-
-    <script defer>
-
-        function isValidUsername(username) {
-            /^[A-Za-z0-9_]+$/.test(username)
-        }
-
-        function makeInvalid(elem_feedback, input_elem, msg) {
-            elem_feedback.innerHTML = msg
-            input_elem.classList.add('is-invalid')
-            // elem_feedback.style.display = 'block'
-
-        }
-
-        function removeIsInvalidClass(elem) {
-
-            document.querySelectorAll('.invalid-feedback').forEach((e) => {e.innerHTML = 'Required field'})
-
-            console.log(elem)
-
-            elem.classList.remove('was-validated')
-            
-            let children = elem.querySelectorAll('*');
-
-            for (let child of children) {
-                child.classList.remove('is-invalid');
-            }
-        }
-
-        let forms = document.querySelectorAll('.needs-validation') 
-
-        for (let form of forms) {
-            form.addEventListener('submit', async function(event) {
-
-                removeIsInvalidClass(event.target)
-                
-
-                let is_login = false;
-                
-                if (this.id === 'login-form') {
-                    is_login = true
-                }
-
-                if (!form.checkValidity()) {
-
-                    event.preventDefault();
-                    event.stopPropagation();
-                    form.classList.add('was-validated');
-                    return;
-                }
-
-                event.preventDefault();
-
-                let formData = new FormData(this); 
-                console.log(formData)
-
-            try {   
-                let action = '/login'
-
-                if (!is_login) {
-                    action = '/register'
-
-                }
-                console.log(action)
-                const response = await fetch(action, { method: "POST", body: formData});
-
-                const data = await response.json(); // Parse response JSON
-
-                console.log("hahaha")
-
-                if (data['success'] == true) {
-                    console.log("success!!")
-
-                    if (is_login) window.location.href = '/dashboard';
-                    else {
-                        $('#registerModal').on('hidden.bs.modal', function () {
-                            $(this).find('form').trigger('reset');
-                        });
-                        $('#registerModal').modal('hide');
-                        //window.location.href = '/';
-                        $('#loginModal').modal('show');
-
-                    }
-                    return
-                }
-                else {
-                    console.log('AHAHAH')
-
-                    if (data.hasOwnProperty('regex-error')){
-                        msg = data['msg']
-                        if (data['regex-error'] === 'username') {
-                            console.log("here")
-                            if (is_login){
-                                makeInvalid(document.getElementById('login-username-error'), document.getElementById('username-login'), msg)
-                                
-                            }
-                            else {
-                                makeInvalid(document.getElementById('register-username-error'),document.getElementById('username-register'), msg)
-                            }
-                        }
-                        else {
-                            if (is_login) {
-                                makeInvalid(document.getElementById('login-password-error'), document.getElementById('password-login'),msg)
-                            }
-                            else {
-                                makeInvalid(document.getElementById('register-password-error'), document.getElementById('passowrd-register'),msg)
-                            }
-                        }
-                        return
-                        
-                    }
-
-                    if (data.hasOwnProperty('user-exists')) {
-                        msg = data['msg']
-
-                        console.log(msg)
-                        if (data['user-exists']) {
-                            makeInvalid(document.getElementById('register-username-error'), document.getElementById('username-register'),msg)
-
-                        }
-                        else makeInvalid(document.getElementById('login-username-error'), document.getElementById('username-login'),msg)
-
-                        return 
-                    }
-                    else if (data.hasOwnProperty('incorrect-password')) {
-                        msg = data['msg']
-                        makeInvalid(document.getElementById('login-password-error'), document.getElementById('password-login'),msg)
-                        return
-                    }
-
-                    
-                    if (data.hasOwnProperty('non-matching-passwords')) {
-                        msg = data['msg']
-                        makeInvalid(document.getElementById('register-password-confirm-error'), document.getElementById('password-confirm-register'), msg)
-
-                    }
-
-                    // if (data.hasOwnProperty('redirect')) window.location.href = data.redirect;
-
-                }
-
-            } catch (error) {
-                console.error('Some network error occured', error);
-            }
-
-            })
-        }
-
-    </script>
-
-
     
 </body>
 </html>
