--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -3,11 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>4pics1word | Play Game</title>
+    <script defer src="{{ url_for('static', filename='js/game-attempt.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/game_attempt.css') }}">
 </head>
 <body>
+    <div class = 'images-content container'>
 
-    CHALLENGE PAGE
- 
+        <h2 class = 'text'>
+            Attempt <span id="attempt-counter">1</span>
+        </h2>
+
+        <div>
+            <div class="row">
+              <div class="col-6 image-cell" id = 'img1'>
+                <img src="/get_image/1/1" alt="Duck">
+              </div>
+              <div class="col-6 image-cell" id = 'img2'>
+                <img src="/get_image/1/2" alt="Duck">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6 image-cell" id = 'img3'>
+                <img src="/get_image/1/3" alt="Duck">
+              </div>
+              <div class="col-6 image-cell" id = 'img4'>
+                <img src="/get_image/1/4" alt="Duck">
+              </div>
+            </div>
+          </div>
+
+        <div class = 'word-enter-section'>
+            <div class = 'word-enter-title text' style = 'text-align: center;'>
+                Enter a word or phrase which links the above images
+            </div>
+            <input id="word-input" class = 'text' type="text" style = 'text-align: center; border: none; margin: 20px; outline: none; background-color: transparent;'>
+            <!-- <div id="underline-container"></div> -->
+        </div>
+
+
+        <div>
+            <button onclick = "incrementCounter()" class="btn btn-primary" id="make-guess">Guess</button>
+        </div>
+    </div>
+    
 </body>
 </html>
