--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -3,253 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/styles.css')}}">
     <title>Document</title>
 </head>
 <body>
 
-    <!--- navbar -->
-   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">4pics1word</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">challenges</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Create challenge</a>
-        </li>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">4Pics1Word</a>
         
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+        
+        <div class="search-box" >
+            <form class="d-flex">
+                <input class="form-control me-2" type="text" name="search" id="srch" placeholder="Search">
+                <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
+            </form>
+        </div>
+        <button class="navbar-toggler" style="margin-left:5vw; margin-right:5vw"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" style="margin-left: 2vw;">
+          
+          <ul class="navbar-nav ml-auto nav-fill w-100">
+            <li class="nav-item">
+                <a class="nav-link"  href="#">Create Challenge <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"  href="#">Challanges <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item" id="login">
+                <a class="nav-link"  data-bs-toggle="modal" data-bs-target="#loginModal" href="#">Login <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="modal" data-bs-target="#registerModal" href="#">Register <span class="sr-only">(current)</span></a>
+              </li>
+          </ul>
+        </div>
+        
+      </nav>
 
-       <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
-      Login
-    </button>
-
-    <!-- Modal Login-->
     <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-          <div class="modal-body">
-              <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close" id = 'close-button-auth-popup'>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
-                      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                      <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-                    </svg>
-              </button>
-              <div class="wrapper">
-                  <form action="">
-                      <h1>Login</h1>
-                      <div class="username-container input-box">
-                          <input type="text" id = 'username-input' placeholder="Username" class = 'form-control' required>
-                          <i class="bi bi-person-fill"></i>
-                      </div>
-                      <div class="password-container input-box">
-                          <input type="password" id = 'password-input' placeholder="Password" class = 'form-control' required>
-                          <i class="bi bi-key-fill"></i>
-                          <div class = 'invalid-feedback'>Invalid Password</div>
-                      </div>
-          
-                      <button type="submit" class="btn">Login</button>
-          
-                      <div class="register-link">
-                          <p>Don't have an account? <a data-bs-toggle="modal" data-bs-target="#registerModal" href = ''>Register</a></p>
-                      </div>
-                  </form>
-              </div>
-          </div>
-      </div>
-      </div>
-  </div>
-
-  <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-        <div class="modal-body">
-            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close" id = 'close-button-auth-popup'>
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-                  </svg>
-            </button>
-            <div class="wrapper">
-                <form action="">
-                    <h1>Register</h1>
-                    <div class="input-box">
-                        <input type="text" placeholder="Username" 
-                        required>
-                        <i class="bi bi-person-fill"></i>
-                    </div>
-                    <div class="input-box">
-                        <input type="password" placeholder="Password" required>
-                        <i class="bi bi-key-fill"></i>
-                    </div>
-                    <div class="input-box">
-                        <input type="password" placeholder="Confirm Password" required>
-                        <i class="bi bi-key-fill"></i>
-                    </div>
-        
-                    
-        
-                    <button type="submit" class="btn">Register</button>
-        
-                    <div class="Login-link">
-                        <p>Already have an account? <a data-bs-toggle="modal" data-bs-target="#loginModal" href = ''>Login</a></p>
-                    </div>
-                </form>
+        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close" id = 'close-button-auth-popup'>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                      </svg>
+                </button>
+                <div class="wrapper">
+                    <form action="">
+                        <h1>Login</h1>
+                        <div class="username-container input-box">
+                            <input type="text" id = 'username-input' placeholder="Username" class = 'form-control' required>
+                            <i class="bi bi-person-fill"></i>
+                        </div>
+                        <div class="password-container input-box">
+                            <input type="password" id = 'password-input' placeholder="Password" class = 'form-control' required>
+                            <i class="bi bi-key-fill"></i>
+                            <div class = 'invalid-feedback'>Invalid Password</div>
+                        </div>
+            
+                        <button type="submit" class="btn">Login</button>
+            
+                        <div class="register-link">
+                            <p>Don't have an account? <a data-bs-toggle="modal" data-bs-target="#registerModal" href = ''>Register</a></p>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
+        </div>
     </div>
+
+
+    <!-- Modal Register-->
+    <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close" id = 'close-button-auth-popup'>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                      </svg>
+                </button>
+                <div class="wrapper">
+                    <form action="">
+                        <h1>Register</h1>
+                        <div class="input-box">
+                            <input type="text" placeholder="Username" 
+                            required>
+                            <i class="bi bi-person-fill"></i>
+                        </div>
+                        <div class="input-box">
+                            <input type="password" placeholder="Password" required>
+                            <i class="bi bi-key-fill"></i>
+                        </div>
+                        <div class="input-box">
+                            <input type="password" placeholder="Confirm Password" required>
+                            <i class="bi bi-key-fill"></i>
+                        </div>
+            
+                        
+            
+                        <button type="submit" class="btn">Register</button>
+            
+                        <div class="Login-link">
+                            <p>Already have an account? <a data-bs-toggle="modal" data-bs-target="#loginModal" href = ''>Login</a></p>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        </div>
     </div>
-</div>
+    <script>
+  
+        $('.search-box input').focus(function() {
+          $(this).parent().parent().css('width', '40vw');
+      });
+      
+      $('.search-box input').blur(function() {
+          $(this).parent().parent().css('width', '36vw');  
+      });
+      
+      </script>
+    </body>
 
-  <style>
-    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-    .modal-body {
-      padding: 0;
-  }
-  
-  #close-button-auth-popup {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      border: 0;
-      background-color: transparent;
-  }
-  
-  .wrapper {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: #fff; 
-      /* width: 420px; */
-      color: #333; 
-      border-radius: 10px;
-      padding: 40px; 
-      /* box-shadow: 0 0 10px rgba(0,0,0,.1);  */
-      margin-top: 50px; 
-  }
-  
-  .wrapper h1 {
-      font-size: 36px;
-      text-align: center;
-      color: #333; 
-  }
-  
-  .wrapper .input-box {
-      position: relative;
-      width: 100%;
-      height: 50px;
-      margin: 30px 0;
-  }
-  
-  .input-box input {
-      width: 100%;
-      height: 100%;
-      background: transparent;
-      border: 2px solid #aaa; 
-      border-radius: 40px;
-      font-size: 15px;
-      color: #333;
-      padding: 20px 45px 20px 20px;
-      box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1); 
-      transition: border-color 0.3s, box-shadow 0.3s; 
-      &:focus {
-          border-color: #9932cc; 
-          box-shadow: inset 0 2px 4px rgba(128, 0, 128, 0.4);
-      }
-      &::placeholder {
-          color: #aaa; 
-      }
-  }
-  
-  .input-box i {
-      position: absolute;
-      right: 20px;
-      top: 50%; 
-      transform: translateY(-50%);
-      font-size: 20px;
-      color: #555; 
-  }
-  
-  .wrapper .remember-forgot {
-      display: flex;
-      justify-content: center;
-      font-size: 14.5px;
-      margin: -15px 0 20px;
-  }
-  
-  .remember-forgot label input {
-      accent-color: #9932cc; 
-      margin-right: 5px;
-  }
-  
-  .wrapper .btn {
-      width: 100%;
-      height: 45px;
-      background-color: purple; 
-      border: none;
-      border-radius: 40px;
-      box-shadow: 0 0 10px rgba(0,0,0,.1);
-      cursor: pointer;
-      font-size: 16px;
-      color: #ffffff; 
-      margin-top: 20px; 
-      &:hover,
-      &:focus {
-          background-color: #9932cc; 
-          color: #ffffff; 
-          box-shadow: 0 0 10px rgba(128,0,128,.5); 
-      }
-  }
-
-  .wrapper .register-link {
-    font-size: 14.5px;
-    text-align: center;
-    margin-top: 20px; 
-}
-
-.register-link p a {
-  color: #9932cc; 
-  text-decoration: none;
-  font-weight: 600;
-  &:hover {
-      text-decoration: underline;
-  }
-}
-
-.Login-link p a {
-  color: #9932cc; 
-  text-decoration: none;
-  font-weight: 600;
-  &:hover {
-      text-decoration: underline;
-  }
-}
-
-.wrapper .Login-link {
-  font-size: 14.5px;
-  text-align: center;
-  margin-top: 20px; 
-}
-
-  </style>
-
-    </div>
-  </div>
-</nav>
-    
-    <h1>CHALLENGE BOARD</h1>
-</body>
 </html>
