Basically finalised the game creation, with the exception of styling and major input validation for the user. Duplicate images are detected, no image inputs is detected. The user then submits and the Game() instance is created, and the title, answer and other values are stored and commited. The game id is then found out and the images are saved on the file system in an appropriate location, this is /uploads/game-<id>, with all the images in there (4 images). The processGame() function returns True or False depending on success or failure, any errors is handled client side and will not result in a page load

--- a/4pics1word/templates/create_game.html
+++ b/4pics1word/templates/create_game.html
@@ -22,7 +22,7 @@
         <h1 class = 'text'>
             Create your game
         </h1>
-        <input style = 'width: 80%;' name = 'game-title' placeholder = 'Game title' required value = 'Medium Difficulty: Car Brands' type="text">
+        <input style = 'width: 80%;' name = 'game-title' placeholder = 'Game title' required type="text">
 
         <div>
             <div class="row">
@@ -97,11 +97,11 @@
                 const isLowerCase = (string) => /^[a-z]*$/.test(string)
 
                 const inputField = document.getElementById("word-input");
-                inputField.focus();
+                // inputField.focus();
         
-                inputField.addEventListener("blur", () => {
-                    inputField.focus();
-                });
+                // inputField.addEventListener("blur", () => {
+                //     inputField.focus();
+                // });
 
                 function isValidPhrase(str) {
                     // Reference: chatGPT generated regex => "write a regex that matches when contains only letters or numbers, 
@@ -134,7 +134,7 @@
             <div class = 'row text' >
                 Add a hint your players (you may choose to add none)
             </div>
-            <input name = 'hint' style = 'width: 100%;' value = 'Consider the company of the cars in the image' type="text">
+            <input type="text" name = 'hint' style = 'width: 100%;' placeholder="Type hint here">
         </div>
 
 
